--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fancyapps/ui": "^4.0.11",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "bvi": "^1.0.2",
     "ejs-loader": "^0.5.0",
     "jquery": "^3.6.0",
     "slick-carousel": "^1.8.1",
